maximo/maximo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maximo-svc
  namespace: maximo
spec:
  ports:
  - port: 80
    targetPort: 7001
    name: web
  - port: 13400
    targetPort: 13400
    name: rmi
  selector:
    name: maximo-apps
