maximo/maximo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maximo
  annotations:
  # 增加annotations：配置session affinity
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "md5"
spec:
  rules:
  - host: eam.gdphdc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: maximo-svc
          servicePort: 80
